--- a/index.css
+++ b/index.css
@@ -53,15 +53,30 @@
 }
 
 #malaysia-map {
+  display: block;
   background: aliceblue;
   /* display: block; */
   /* top: auto; */
   /* left: auto; */
-  min-width: 384px;
-  /* float: left; */
+  float: left;
+  /* min-width: 384px; */
   width: 430px;
   height: 323px;
   /* width: 50%; */
   /* height: auto; */
+}
+
+#bystates-daily {
+  display: block;
+  /* top: auto; */
+  /* left: auto; */
+  /* min-width: 384px; */
+  float: left;
+  /* clear: left; */
+  /* float: right; */
+  /* width: 50%; */
+  /* height: auto; */
+  width: 430px;
+  height: 323px;
 }
 
