--- a/index.css
+++ b/index.css
@@ -67,3 +67,32 @@
 #bystate-dynamics div svg g g g g path { 
 	stroke-width:4px; 
 }
+
+body, html {
+	height: 100%;
+	margin: 0;
+	font-family: Arial;
+}
+
+.tablink {
+	background-color: #555;
+	color: white;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	font-size: 17px;
+	width: 50%;
+	max-width: 430px;
+}
+
+.tablink:hover {
+	background-color: #777;
+}
+
+.tabcontent {
+	/* color: white; */
+	display: none;
+	height: 100%;
+}
