--- a/index.css
+++ b/index.css
@@ -8,6 +8,20 @@
 }
 
 #linearlogbutton, #linearlogbuttonchange {
+  background-color: #f0f0f0;
+  display: block;
+  left: auto;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  width: 430px;
+  height: 20px;
+  float: left;
+  clear: left;
+}
+
+#linearlogbutton:hover, #linearlogbuttonchange:hover {
+  background-color: #a0a0a0;
   display: block;
   left: auto;
   border: 0;
